--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">iensp</string>
+
+    <string name="item_inicio">Inicio</string>
+    <string name="item_Eventos">Eventos</string>
+    <string name="item_Contacto">Contacto</string>
+    <string name="item_Escaneo">ESCANEO</string>
+    <string name="item_Cuenta">Cuenta</string>
+
+    <string name="TituloRl">Titulo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
